--- a/HTML_CSS/4_viikko/style.css
+++ b/HTML_CSS/4_viikko/style.css
@@ -10,7 +10,7 @@
   /* Colors */
   --clr-white: #ffffff;
   --clr-primary: #fb7f50;
-  --clr-primary-2: hsl(14, 100%, 70%);
+  --clr-primary-2: hsl(14, 100%, 60%);
   --clr-bg: #236747;
   --clr-light-gray: rgb(128, 128, 128);
   --clr-border: rgb(198, 198, 198);
@@ -44,7 +44,7 @@ form {
   background-color: var(--clr-white);
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 380px;
   border-radius: 0.5rem;
   padding: 0.75rem;
 }
@@ -70,7 +70,7 @@ label {
 }
 
 input {
-  color: var(--clr-primary);
+  color: dark;
   margin: 0.3125rem 1.25rem 0 1.25rem;
   padding: 0.625rem;
   border: 1px solid var(--clr-border);
@@ -129,20 +129,33 @@ a:hover {
   margin: 0.3125rem 0 0 1.25rem;
 }
 
-@media (max-width: 1024px) {
-  form {
-    width: 40%;
-  }
+.message {
+  padding: 0.5rem 1rem;
+  border-radius: 0.625rem;
+  display: none;
+  animation: fadeIn 0.5s ease-in-out;
+  margin: 0.1rem 1.25rem;
 }
 
-@media (max-width: 768px) {
-  form {
-    width: 50%;
-  }
+.message.success {
+  background-color: var(--clr-white);
+  border: 1px solid var(--clr-bg);
+  color: var(--clr-bg);
 }
 
-@media (max-width: 480px) {
-  form {
-    width: 90%;
+.message.error {
+  background-color: var(--clr-white);
+  border: 1px solid var(--clr-primary);
+  color: var(--clr-primary);
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
