--- a/JS/04_viikko/harjoitukset/Pankkiautomaatti/style.css
+++ b/JS/04_viikko/harjoitukset/Pankkiautomaatti/style.css
@@ -1,12 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-}
 
 *,
 *::before,
 *::after {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -14,13 +12,12 @@
   font-size: 16px;
 
   /* Colors */
-  --clr-bg: #fff9c4; /* Light pastel yellow for the background */
-  --clr-primary: #4caf50; /* Slightly cooler and brighter green */
-  --clr-primary-2: #388e3c; /* Darker green for hover effect */
-  --clr-error: #ff7369; /* Soft red for error messages */
-  --clr-light-gray: #b0b0b0; /* Light gray text */
-  --clr-border: #e1e9e1; /* Pale green for borders */
-  --clr-dark-text: #4a4a4a; /* Dark gray text for readability */
+  --clr-bg: rgb(246, 248, 211);
+  --clr-bg-main: #254a3c; /* Light pastel yellow for the background */
+  --clr-primary: #1d4134; /* Slightly cooler and brighter green */
+  --clr-primary-2: #fdd487; /* Darker green for hover effect */
+  --clr-error: #ed4d47; /* Soft red for error messages */
+  --clr-font: white;
 
   /* Fonts */
   --ff-heading: "Poppins", sans-serif;
@@ -29,63 +26,74 @@
 }
 
 body {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   width: 100%;
   padding: 2rem;
   background-color: var(--clr-bg);
   font-family: var(--ff-alt);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
-form {
-  background-color: var(--clr-white);
+main {
+  background-color: var(--clr-bg-main);
   display: flex;
   flex-direction: column;
-  width: 380px;
+  width: 400px;
   border-radius: 0.5rem;
   padding: 0.75rem;
 }
 
-.showBalance > h1,
-h2 {
-  color: var(--clr-primary-2);
-  font-family: var(--ff-heading);
-  font-weight: normal;
-  text-align: center;
-  margin-top: 0.75rem;
+.form_pin {
+  background-color: var(--clr-primary);
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.5rem;
+  margin: 0.5rem 3rem 0.5rem 3rem;
 }
 
-label {
-  color: var(--clr-light-gray);
-  font-size: 0.625rem;
-  margin: 0.9375rem 0 0 1.25rem;
+.form_data {
+  background-color: var(--clr-primary);
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.5rem;
+  margin: 0.5rem 3rem 0.5rem 3rem;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 1rem 1rem 1rem;
 }
 
 input {
-  color: dark;
-  margin: 0.3125rem 1.25rem 0 1.25rem;
-  padding: 0.625rem;
-  border: 1px solid var(--clr-border);
+  color: var(--clr-font);
+  background-color: var(--clr-primary);
+  border: none;
   border-radius: 0.3125rem;
   font-size: 1rem;
+  width: 60%;
 }
 
 input::placeholder {
-  color: var(--clr-border);
+  color: var(--clr-font);
+}
+
+.error {
+  color: var(--clr-error);
+  font-size: 0.875rem;
+  margin: 0.3125rem 0 0 1.25rem;
 }
 
 button {
-  background-color: var(--clr-primary);
-  border-color: var(--clr-white);
+  background-color: var(--clr-primary-2);
+  border: none;
   color: var(--clr-white);
-  border-style: solid;
-  padding: 0.625rem;
-  margin: 1.25rem 2.5rem;
-  border-radius: 0.625rem;
+  margin: 0.5rem 0rem 0.5rem 0.25rem;
+  padding: 0.5rem 0rem 0.5rem 0rem;
+  border-radius: 0.3125rem;
   font-size: 1rem;
+  width: 50%;
 }
 
 button:hover {
@@ -93,8 +101,17 @@ button:hover {
   cursor: pointer;
 }
 
-.error {
-  color: var(--clr-error);
-  font-size: 0.875rem;
-  margin: 0.3125rem 0 0 1.25rem;
+label {
+  color: var(--clr-font);
+  font-size: 1rem;
+  margin: 0.5rem 0 0 1rem;
+}
+
+.showBalance > h1,
+h2 {
+  color: var(--clr-font);
+  font-family: var(--ff-heading);
+  font-weight: normal;
+  text-align: center;
+  margin-top: 0.75rem;
 }
