--- a/JS/04_viikko/Pannukakkusivu/style.css
+++ b/JS/04_viikko/Pannukakkusivu/style.css
@@ -36,7 +36,7 @@ body {
   align-items: center;
   margin: 0;
   min-height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .container {
