--- a/JS/04_viikko/Pannukakkusivu/style.css
+++ b/JS/04_viikko/Pannukakkusivu/style.css
@@ -36,7 +36,6 @@ body {
   align-items: center;
   margin: 0;
   min-height: 100vh;
-  /* overflow: hidden; */
 }
 
 .container {
@@ -49,7 +48,6 @@ body {
 .image-container {
   position: relative;
   flex: 1;
-
   min-height: 100vh;
 }
 
@@ -61,9 +59,21 @@ body {
 
 .form-container {
   flex: 1;
-  padding: 50px;
+  padding: 15px;
   min-height: 100vh;
   overflow-y: auto;
+}
+h2 {
+  text-align: center;
+}
+h3 {
+  margin-top: 10px;
+}
+.row-container {
+  display: flex;
+}
+form {
+  margin: 10px 25px 10px 50px;
 }
 
 .price-banner {
@@ -91,10 +101,6 @@ body {
   box-shadow: 0 0 20px rgba(209, 123, 73, 0.4);
 }
 
-h3 {
-  margin-top: 15px;
-}
-
 #totalPriceDisplay {
   transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
   display: inline-block;
@@ -102,15 +108,17 @@ h3 {
 
 #totalPriceDisplay.animate {
   transform: scale(1.2);
-  color: #e28c5a; /* или любой другой оттенок из палитры */
+  color: #e28c5a;
 }
 
-input[type="checkbox"] {
-  margin-right: 5px;
+label,
+select {
+  margin-top: 10px;
+  display: block;
 }
 
-select,
+/* select,
 label {
   display: block;
   margin-top: 10px;
-}
+} */
