--- a/HTML_CSS/8_viikko/Magic_Ball/style.css
+++ b/HTML_CSS/8_viikko/Magic_Ball/style.css
@@ -95,17 +95,21 @@ p {
   font-size: 2rem;
   color: white;
   opacity: 0;
-  transition: opacity 0.5s ease, transform 0.5s ease;
+  transform: translateY(20px);
+  transition: opacity 1.5s ease, transform 1.5s ease;
   text-align: center;
 }
 
 #answer.visible {
   font-size: 2rem;
   opacity: 1;
+  transform: translateY(0);
 }
 
 #answer.eightMode {
   font-size: 6rem;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 @keyframes shake {
